v2.0.0/_sources/plugins/csr_info_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na

.. Anchors

.. _ansible_collections.cisco.ise.csr_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.csr_info -- Information module for Csr
++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 2.0.0).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install cisco.ise`.

    To use it in a playbook, specify: :code:`cisco.ise.csr_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.ise

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Csr.
- Get Csr by id.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk >= 1.2.0
- python >= 3.5


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-filter"></div>
                    <b>filter</b>
                    <a class="ansibleOptionLink" href="#parameter-filter" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Filter query parameter. &lt;div&gt; &lt;style type=&quot;text/css&quot; scoped&gt; .apiServiceTable td, .apiServiceTable th { padding 5px 10px !important; text-align left; } &lt;/style&gt; &lt;span&gt; &lt;b&gt;Simple filtering&lt;/b&gt; should be available through the filter query string parameter. The structure of a filter is a triplet of field operator and value separated with dots. More than one filter can be sent. The logical operator common to ALL filter criteria will be by default AND, and can be changed by using the &lt;i&gt;&quot;filterType=or&quot;&lt;/i&gt; query string parameter. Each resource Data model description should specify if an attribute is a filtered field. &lt;/span&gt; &lt;br /&gt; &lt;table class=&quot;apiServiceTable&quot;&gt; &lt;thead&gt; &lt;tr&gt; &lt;th&gt;OPERATOR&lt;/th&gt; &lt;th&gt;DESCRIPTION&lt;/th&gt; &lt;/tr&gt; &lt;/thead&gt; &lt;tbody&gt; &lt;tr&gt; &lt;td&gt;EQ&lt;/td&gt; &lt;td&gt;Equals&lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td&gt;NEQ&lt;/td&gt; &lt;td&gt;Not Equals&lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td&gt;GT&lt;/td&gt; &lt;td&gt;Greater Than&lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td&gt;LT&lt;/td&gt; &lt;td&gt;Less Then&lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td&gt;STARTSW&lt;/td&gt; &lt;td&gt;Starts With&lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td&gt;NSTARTSW&lt;/td&gt; &lt;td&gt;Not Starts With&lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td&gt;ENDSW&lt;/td&gt; &lt;td&gt;Ends With&lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td&gt;NENDSW&lt;/td&gt; &lt;td&gt;Not Ends With&lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td&gt;CONTAINS&lt;/td&gt; &lt;td&gt;Contains&lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;td&gt;NCONTAINS&lt;/td&gt; &lt;td&gt;Not Contains&lt;/td&gt; &lt;/tr&gt; &lt;/tbody&gt; &lt;/table&gt; &lt;/div&gt;.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-filterType"></div>
                    <b>filterType</b>
                    <a class="ansibleOptionLink" href="#parameter-filterType" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>FilterType query parameter. The logical operator common to ALL filter criteria will be by default AND, and can be changed by using the parameter.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-hostName"></div>
                    <b>hostName</b>
                    <a class="ansibleOptionLink" href="#parameter-hostName" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>HostName path parameter. Name of the host of which CSR&#x27;s should be returned.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-id"></div>
                    <b>id</b>
                    <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Id path parameter. The ID of the Certificate Signing Request returned.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-ise_debug"></div>
                    <b>ise_debug</b>
                    <a class="ansibleOptionLink" href="#parameter-ise_debug" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                                                                    <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li><div style="color: blue"><b>no</b>&nbsp;&larr;</div></li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Flag for Identity Services Engine SDK to enable debugging.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-ise_hostname"></div>
                    <b>ise_hostname</b>
                    <a class="ansibleOptionLink" href="#parameter-ise_hostname" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                 / <span style="color: red">required</span>                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>The Identity Services Engine hostname.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-ise_password"></div>
                    <b>ise_password</b>
                    <a class="ansibleOptionLink" href="#parameter-ise_password" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                 / <span style="color: red">required</span>                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>The Identity Services Engine password to authenticate.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-ise_username"></div>
                    <b>ise_username</b>
                    <a class="ansibleOptionLink" href="#parameter-ise_username" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                 / <span style="color: red">required</span>                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>The Identity Services Engine username to authenticate.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-ise_uses_api_gateway"></div>
                    <b>ise_uses_api_gateway</b>
                    <a class="ansibleOptionLink" href="#parameter-ise_uses_api_gateway" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                          <div style="font-style: italic; font-size: small; color: darkgreen">
                        added in 1.1.0 of cisco.ise
                      </div>
                                                        </td>
                                <td>
                                                                                                                                                                                                                    <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li><div style="color: blue"><b>yes</b>&nbsp;&larr;</div></li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Flag that informs the SDK whether to use the Identity Services Engine&#x27;s API Gateway to send requests.</div>
                                            <div>If it is true, it uses the ISE&#x27;s API Gateway and sends requests to https://{{ise_hostname}}.</div>
                                            <div>If it is false, it sends the requests to https://{{ise_hostname}}:{{port}}, where the port value depends on the Service used (ERS, Mnt, UI, PxGrid).</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-ise_verify"></div>
                    <b>ise_verify</b>
                    <a class="ansibleOptionLink" href="#parameter-ise_verify" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                                                                    <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li><div style="color: blue"><b>yes</b>&nbsp;&larr;</div></li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Flag to enable or disable SSL certificate verification.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-ise_version"></div>
                    <b>ise_version</b>
                    <a class="ansibleOptionLink" href="#parameter-ise_version" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                    <b>Default:</b><br/><div style="color: blue">"3.1.0"</div>
                                    </td>
                                                                <td>
                                            <div>Informs the SDK which version of Identity Services Engine to use.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-ise_wait_on_rate_limit"></div>
                    <b>ise_wait_on_rate_limit</b>
                    <a class="ansibleOptionLink" href="#parameter-ise_wait_on_rate_limit" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                                                                    <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li><div style="color: blue"><b>yes</b>&nbsp;&larr;</div></li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Flag for Identity Services Engine SDK to enable automatic rate-limit handling.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-page"></div>
                    <b>page</b>
                    <a class="ansibleOptionLink" href="#parameter-page" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Page query parameter. Page number.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-size"></div>
                    <b>size</b>
                    <a class="ansibleOptionLink" href="#parameter-size" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Size query parameter. Number of objects returned per page.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-sort"></div>
                    <b>sort</b>
                    <a class="ansibleOptionLink" href="#parameter-sort" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Sort query parameter. Sort type - asc or desc.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-sortBy"></div>
                    <b>sortBy</b>
                    <a class="ansibleOptionLink" href="#parameter-sortBy" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>SortBy query parameter. Sort column by which objects needs to be sorted.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Attributes


.. Notes

Notes
-----

.. note::
   - Supports ``check_mode``
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco ISE SDK
   - The parameters starting with ise_ are used by the Cisco ISE Python SDK to establish the connection

.. Seealso

See Also
--------

.. seealso::

   `Csr reference <https://ciscoisesdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Csr object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Csr
      cisco.ise.csr_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        page: 0
        size: 0
        sort: string
        sortBy: string
        filter: []
        filterType: string
      register: result

    - name: Get Csr by id
      cisco.ise.csr_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        hostName: string
        id: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-ise_response"></div>
                    <b>ise_response</b>
                    <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco ISE Python SDK</div>
                                        <br/>
                                                                <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;csrContents&quot;: &quot;string&quot;,
      &quot;friendlyName&quot;: &quot;string&quot;,
      &quot;groupTag&quot;: &quot;string&quot;,
      &quot;hostName&quot;: &quot;string&quot;,
      &quot;id&quot;: &quot;string&quot;,
      &quot;keySize&quot;: &quot;string&quot;,
      &quot;link&quot;: {
        &quot;href&quot;: &quot;string&quot;,
        &quot;rel&quot;: &quot;string&quot;,
        &quot;type&quot;: &quot;string&quot;
      },
      &quot;signatureAlgorithm&quot;: &quot;string&quot;,
      &quot;subject&quot;: &quot;string&quot;,
      &quot;timeStamp&quot;: &quot;string&quot;,
      &quot;usedFor&quot;: &quot;string&quot;
    }</div>
                                    </td>
            </tr>
                                <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-ise_responses"></div>
                    <b>ise_responses</b>
                    <a class="ansibleOptionLink" href="#return-ise_responses" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">list</span>
                       / <span style="color: purple">elements=dictionary</span>                    </div>
                    <div style="font-style: italic; font-size: small; color: darkgreen">added in 1.1.0 of cisco.ise</div>                </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco ISE Python SDK</div>
                                        <br/>
                                                                <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">[
      {
        &quot;csrContents&quot;: &quot;string&quot;,
        &quot;friendlyName&quot;: &quot;string&quot;,
        &quot;groupTag&quot;: &quot;string&quot;,
        &quot;hostName&quot;: &quot;string&quot;,
        &quot;id&quot;: &quot;string&quot;,
        &quot;keySize&quot;: &quot;string&quot;,
        &quot;link&quot;: {
          &quot;href&quot;: &quot;string&quot;,
          &quot;rel&quot;: &quot;string&quot;,
          &quot;type&quot;: &quot;string&quot;
        },
        &quot;signatureAlgorithm&quot;: &quot;string&quot;,
        &quot;subject&quot;: &quot;string&quot;,
        &quot;timeStamp&quot;: &quot;string&quot;,
        &quot;usedFor&quot;: &quot;string&quot;
      }
    ]</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

